[gd_scene load_steps=7 format=3 uid="uid://cltj37c6k3bhe"]

[ext_resource type="Script" path="res://Scenes/Enemies/Enemy2/enemy_2.gd" id="1_5c7yh"]
[ext_resource type="Texture2D" uid="uid://c1oko54miho5k" path="res://Assets/Sprites/Enemies/ship_sidesC.png" id="1_wi4kg"]
[ext_resource type="Script" path="res://Scenes/Enemies/Enemy1/Control.gd" id="2_gxt7h"]
[ext_resource type="Script" path="res://Scenes/Enemies/Enemy1/HP.gd" id="3_s23h6"]
[ext_resource type="Texture2D" uid="uid://dr868ttfs08i" path="res://Assets/Sprites/Explosions/circle.png" id="5_3hw8o"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dg8ic"]
radius = 53.0
height = 122.0

[node name="Enemy2" type="CharacterBody2D"]
scale = Vector2(1.6, 1.6)
collision_layer = 4
collision_mask = 27
script = ExtResource("1_5c7yh")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_dg8ic")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0.278431, 0.278431, 1)
rotation = 1.5708
texture = ExtResource("1_wi4kg")
metadata/_edit_lock_ = true

[node name="ShootPulse" type="Timer" parent="."]
autostart = true

[node name="PulsePoint" type="Marker2D" parent="."]
position = Vector2(42, 0)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 109.0
offset_bottom = 99.0
script = ExtResource("2_gxt7h")

[node name="HP" type="ProgressBar" parent="UI"]
layout_mode = 0
offset_left = -37.0
offset_top = 48.6667
offset_right = 210.0
offset_bottom = 104.667
scale = Vector2(0.3, 0.3)
value = 100.0
show_percentage = false
script = ExtResource("3_s23h6")

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(0.854902, 0, 0.129412, 1)
texture = ExtResource("5_3hw8o")

[connection signal="timeout" from="ShootPulse" to="." method="_on_shoot_pulse_timeout"]
